--- a/angular-basics-new/src/app/app.component.html
+++ b/angular-basics-new/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-parent></app-parent>
+<!-- <app-parent></app-parent> -->
+<!-- <app-user-info></app-user-info> -->
+<app-new-parent></app-new-parent>
