--- a/angular-routing-app/src/app/rayalaseema/rayalaseema.component.html
+++ b/angular-routing-app/src/app/rayalaseema/rayalaseema.component.html
@@ -1,13 +1,7 @@
 <p>rayalaseema works!</p>
 
-<div class="container">
-  <div class="list-group">
-    <a
-      href="#"
-      class="list-group-item list-group-item-action "
-      *ngFor="let obj of data"
-    >
-      {{ obj.distName }}
-    </a>
-  </div>
-</div>
+<ul>
+  <li *ngFor="let dist of districts">
+    {{ dist }}
+  </li>
+</ul>
