Adding Nested Route

--- a/angular-routing-app/src/app/andhra/andhra.component.html
+++ b/angular-routing-app/src/app/andhra/andhra.component.html
@@ -1,6 +1,6 @@
 <p>andhra works!</p>
 <ul>
-  <li *ngFor="let dist of districts">
+  <li *ngFor="let dist of districts" [routerLink]="['/andhra', dist]">
     {{ dist }}
   </li>
 </ul>
