--- a/angular-routing-app/src/app/rayalaseema/rayalaseema.component.html
+++ b/angular-routing-app/src/app/rayalaseema/rayalaseema.component.html
@@ -8,3 +8,15 @@
     {{ dist.districtName }}
   </li>
 </ul>
+<div style="padding: 10px">
+  <gijgo-datepicker
+    #datepicker
+    [configuration]="configuration"
+  ></gijgo-datepicker
+  ><br />
+  Selected Date: {{ date }} <br /><br />
+  <button class="btn btn-default" (click)="setValue()">Set New Value</button
+  ><br /><br />
+  Event Log:
+  <p>{{ eventLog }}</p>
+</div>
