--- a/Angular/ogani-angular/src/app/header/header.component.html
+++ b/Angular/ogani-angular/src/app/header/header.component.html
@@ -45,19 +45,13 @@
       <div class="col-lg-6">
         <nav class="header__menu">
           <ul>
-            <li class="active"><a href="./index.html">Home</a></li>
-            <li><a href="./shop-grid.html">Shop</a></li>
+            <li class="active"><a routerLink="">Home</a></li>
+            <li><a routerLink="/shop">Shop</a></li>
             <li>
-              <a href="#">Pages</a>
-              <ul class="header__menu__dropdown">
-                <li><a href="./shop-details.html">Shop Details</a></li>
-                <li><a href="./shoping-cart.html">Shoping Cart</a></li>
-                <li><a href="./checkout.html">Check Out</a></li>
-                <li><a href="./blog-details.html">Blog Details</a></li>
-              </ul>
+              <a routerLink="/pages">Pages</a>
             </li>
-            <li><a href="./blog.html">Blog</a></li>
-            <li><a href="./contact.html">Contact</a></li>
+            <li><a routerLink="/blog">Blog</a></li>
+            <li><a routerLink="/contact">Contact</a></li>
           </ul>
         </nav>
       </div>
